# SHARC_V4

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  README.md  SHARC_Port.ioc  SP_Pipeline  STM32L4_FREERTOS.code-workspace  dockerfile  openocd.cfg
.devcontainer/: .dockerignore  devcontainer.json  dockerfile
.github/workflows/: cmake-single-platform.yml  cmake_linux_build.yml
CMake/: arm-none-eabi.cmake  mcu.cmake  scripts.cmake
Core/Inc/: main.h  main.hpp  stm32l4xx_hal_conf.h  stm32l4xx_it.h  u-blox_m9n_Library.h
Core/Inc/HAL_Drivers/: HAL_ICM20649.h  HAL_SD.h  u-blox_m9n_Library.h  u-blox_structs.h
Core/Inc/HAL_Init/: hal_impl.hpp  hal_interface.hpp  init.h
Core/Inc/RTOS_Init/: FreeRTOSConfig.h  rtos_impl.hpp  rtos_interface.hpp
Core/Inc/Sensor_Interface/: ISensor.h  PressureSensor.h  SensorFactory.h  TemperatureSensor.h
Core/Src/: main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c  sysmem.c  u-blox_m9n_Library.cpp
Core/Src/HAL_Drivers/: HAL_ICM20649.c  HAL_SD.c
Core/Src/HAL_Init/: hal_impl.cpp  init.c  setup_hal.cpp
Core/Src/RTOS_Init/: rtos_impl.cpp  rtos_setup.c
CubeMX/: STM32L4R5ZITXP_FLASH.ld  STM32L4R5ZITXP_RAM.ld  startup_stm32l4r5zitxp.s
Modules/: CMakeLists.txt  dsp.cmake  fatfs.cmake  gnss.cmake  gtest.cmake  imu.cmake  rtos.cmake  stm32l4cube.cmake
Modules/FATFS/FatFs_12/src/option/: syscall.c
Modules/ICM42688-P/: ICM42688P.c  ICM42688P.h
Modules/ICM42688-P/Inc/: ICM42688P.h  ICM42688P_registers.h
Modules/ICM42688-P/Src/: ICM42688P.c
Modules/STM32CubeL4/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.c
Modules/UBlox-NEO-M9N/Inc/: u-blox_config_keys.h  uart_interface.hpp
Modules/UBlox-NEO-M9N/Src/: u-blox_m9n_Library.cpp  uart_impl.cpp
Tests/: CMakeLists.txt  compute_spectral_moments_test.cpp  dsp_test.cpp  hello_test.cpp  main_test.cpp  pwelch_test.cpp  sensor_test.cpp  wave_proc_test.cpp
Tests/Mock/Inc/: hal_mock.h  mock_sensor.h
Tests/Mock/Src/: hal_mock.cpp
WaveProc/: CMakeLists.txt
WaveProc/Inc/: wave_functions.h
WaveProc/Src/: wave_functions.c
